Added limited support for C++ structures inheritance (w/ inherited fields constructors) Added limited support for virtual structures (first virtual class in inheritance tree gets a virtual pointer) Updated runtime Structure and Union classes. Added -nocpp flag to undefine __cplusplus